# diplom

./: .gitignore  .pre-commit-config.yaml  CONTRIBUTING.md  README.md  pyproject.toml
objectives/: PSD_clust_and_plot.md
scripts/: 1_calculate_psd.py  2_plot_psd.py  3_interactive_analyze_psd_dr.py  config.py  dr_plotting.ipynb
